added request endpoint

--- a/client/app/book/viewbook/viewbook.html
+++ b/client/app/book/viewbook/viewbook.html
@@ -1,1 +1,6 @@
-<div>book id: {{viewbookCtrl.bookId}}</div>
+<div>cover: {{viewbookCtrl.bookData.cover}}</div>
+<div>author: {{viewbookCtrl.bookData.authors}}</div>
+<div>title: {{viewbookCtrl.bookData.title}}</div>
+<div>description: {{viewbookCtrl.bookData.description}}</div>
+<a href="/profile/{{viewbookCtrl.bookData.owner}}">owner</a>
+
